Add ph-pages package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://abdellani.github.io/ONLINE_STORE_FE/",
+  "homepage": "https://abdellani.github.io/ONLINE_STORE_FE/",
   "name": "online-store-fe",
   "version": "0.1.0",
   "private": true,
@@ -47,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
